[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/HUD/background.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/time (2).png" type="Texture" id=3]
[ext_resource path="res://screens/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/sons/perdeu.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sons/ganhou.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="txtGeral" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.0
margin_top = -125.307
margin_right = 511.0
margin_bottom = -49.3071
custom_fonts/font = SubResource( 1 )
text = "VocÃª encontrou!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnReinicio" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -39.5
margin_right = 142.0
margin_bottom = 39.5
custom_fonts/font = SubResource( 2 )
text = "Reiniciar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="trtTTempo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -414.558
margin_top = -259.262
margin_right = -279.558
margin_bottom = -205.262
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="trtIcone" type="TextureRect" parent="trtTTempo"]
margin_left = -74.7511
margin_top = -26.6968
margin_right = 26.2489
margin_bottom = 69.3032
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="lblTempo" type="Label" parent="trtTTempo"]
margin_left = 15.6606
margin_top = 2.33032
margin_right = 129.661
margin_bottom = 57.3303
custom_fonts/font = SubResource( 3 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tmrTempoJogo" type="Timer" parent="."]
wait_time = 180.0
autostart = true

[node name="AudioGanha" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )

[node name="AudioPerde" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
[connection signal="button_up" from="btnReinicio" to="." method="_on_btnReinicio_button_up"]
[connection signal="timeout" from="tmrTempoJogo" to="." method="_on_tmrTempoJogo_timeout"]
